テスト可能状態
